# DAIseg

./: .gitignore  README.md  callability.sh  extract.samples.sh  flake.nix  full.pipeline.sh  pyproject.toml  result  run.pipeline.sh
simulations/: sims.py  test.daiseg.simple.ipynb
src/daiseg/: daiseg.py  em_alg.py  hmm.py  main.prep.py  main_prep.py  obs.py  preprocessing.py
