[project]
authors = [{ name = "Egor Lappo", email = "lappo@stanford.edu" }]
name = "DAIseg"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [
  "numpy>=2.3.5,<3",
  "scipy>=1.16.3,<2",
  "pandas>=2.3.3,<3",
  "numba>=0.62.1,<0.64",
  "pysam>=0.23.3,<0.24",
  "jq>=1.8.1,<2",
]

[project.scripts]
daiseg = "daiseg.daiseg:main"
prep = "daiseg.main_prep:main"


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]
